[package]
name = "iced_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.12.1" }
ico = "0.3.0"

# serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0"
# uuid = { version = "1.0", features = ["v4", "fast-rng", "serde"] }

# [target.'cfg(not(target_arch = "wasm32"))'.dependencies]

# directories-next = "2.0"
# tracing-subscriber = "0.3"

# [target.'cfg(target_arch = "wasm32")'.dependencies]


# uuid = { version = "1.0", features = ["js"] }

[build-dependencies]
winres = "0.1.12"
